--- a/static/sass/screen.scss
+++ b/static/sass/screen.scss
@@ -4,3 +4,72 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
+
+
+body{
+	background: grey;
+}
+
+html{
+	width:  100%;
+	height:  100%;
+}
+
+#main-wrapper{
+	height: 100%;
+	width: 	100%;
+}
+
+.main{
+	background: white;
+	height: 100%;
+	width: 100%;
+	max-width: 500px;
+	max-height: 900px;
+	overflow: hidden;
+
+	@include border-radius(20px);
+	@include box-shadow(rgba(50, 50, 50, 0.75) 0px 0px 50px );
+	margin: 0 auto;
+}
+
+header{
+	height: 10%;
+	background: green;
+	h1{
+		color: white;
+		font-size: 2em;
+		font-family: Arial Black, Arial Black, Gadget, sans-serif;
+		padding: .5em;
+	}
+}
+
+#content{
+	height: 	75%;
+	width:      100%;
+}
+
+#navigation{
+	background: purple;
+	height:     100px;
+	width: 		100%;
+	.nav-list{
+		li{
+			height: 100%;
+			width: 33.33%;
+			float: left;
+		}
+	}
+}
+
+.transit-list{
+	overflow-y: hidden;
+	li{
+		height: 120px;
+		border-bottom: 1px solid grey;
+		text-align: center;
+		font:  1.5em white;
+	}
+}
