--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -43,27 +43,32 @@ html {
   margin: 0 auto;
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 43, ../sass/screen.scss */
 #page-main .ui-header .app-title {
   display: inline-block;
   float: left;
   margin: 1em auto;
 }
-/* line 47, ../sass/screen.scss */
+/* line 48, ../sass/screen.scss */
 #page-main .ui-header .options {
   width: 15%;
   display: inline-block;
 }
-/* line 55, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 #page-main .ui-content .transit-list .ui-li-divider {
   height: 30px;
 }
-/* line 58, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 #page-main .ui-content .transit-list li {
   height: 120px;
 }
 
-/* line 69, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
+img {
+  height: 80%;
+}
+
+/* line 73, ../sass/screen.scss */
 #navigation .nav-list li {
   width: 25%;
   float: left;
