--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -75,16 +75,27 @@ html {
   margin: 0.5em auto;
   float: left;
 }
-/* line 72, ../sass/screen.scss */
+/* line 71, ../sass/screen.scss */
+#page-stops .ui-content .transit-list li .col-icon .transit-type {
+  font-size: 1.5em;
+  color: red;
+  position: absolute;
+  left: 35px;
+  bottom: 20px;
+}
+/* line 79, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-info {
   float: left;
+  padding-right: 100px;
+  width: 80%;
 }
-/* line 75, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-time {
-  float: right;
+  position: absolute;
+  right: 40px;
   display: inline-block;
 }
-/* line 78, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-time .time-icon-outer {
   background: grey;
   height: 80px;
@@ -95,7 +106,7 @@ html {
   -o-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 84, ../sass/screen.scss */
+/* line 94, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-time .time-icon-inner {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -103,24 +114,25 @@ html {
   -o-border-radius: 50%;
   border-radius: 50%;
   background: orange;
-  position: relative;
+  position: absolute;
   left: 10px;
   top: 10px;
   height: 60px;
   width: 60px;
 }
-/* line 92, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-time .time-icon-inner .time-text {
   text-align: center;
   color: white;
 }
-/* line 95, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li .col-time .time-icon-inner .time-text .time {
-  font-size: 4em;
+  margin: 0.17em 0;
+  font-size: 3.5em;
   display: block;
 }
 
-/* line 114, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 #navigation .nav-list li {
   width: 25%;
   float: left;
