--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -21,48 +21,47 @@ html {
 }
 
 /* line 25, ../sass/screen.scss */
-#main-wrapper {
-  height: 100%;
-  width: 100%;
-}
-
-/* line 30, ../sass/screen.scss */
-#page-stops {
+.ui-page {
   min-width: 350px;
 }
-/* line 33, ../sass/screen.scss */
-#page-stops .ui-header .app-title {
-  display: inline-block;
-  float: left;
+/* line 28, ../sass/screen.scss */
+.ui-page .ui-header .app-title {
   margin: 1em auto;
+  font-family: 'LimelightRegular',Arial,sans-serif;
 }
-/* line 38, ../sass/screen.scss */
-#page-stops .ui-header .options {
-  width: 15%;
+/* line 33, ../sass/screen.scss */
+.ui-page .ui-header .options {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 0;
+  width: 20%;
+  min-width: 150px;
   display: inline-block;
 }
-/* line 46, ../sass/screen.scss */
+
+/* line 50, ../sass/screen.scss */
 #page-stops .ui-content .transit-list .ui-li-divider {
   height: 30px;
 }
-/* line 49, ../sass/screen.scss */
+/* line 53, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus {
   min-height: 120px;
   vertical-align: middle;
 }
-/* line 52, ../sass/screen.scss */
+/* line 56, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon {
   float: left;
   margin-right: 20px;
   height: 120px;
 }
-/* line 56, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon img {
   height: 40px;
   margin: 2em auto;
   float: left;
 }
-/* line 61, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon .transit-type {
   font-size: 1.5em;
   color: red;
@@ -70,19 +69,19 @@ html {
   left: 35px;
   bottom: 20px;
 }
-/* line 69, ../sass/screen.scss */
+/* line 73, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-info {
   margin: 1em 0;
   white-space: normal;
   margin-right: 60px;
 }
-/* line 75, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time {
   position: absolute;
   right: 40px;
   display: inline-block;
 }
-/* line 79, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-outer {
   background: gray;
   height: 50px;
@@ -95,7 +94,7 @@ html {
   position: relative;
   margin: 2em 0;
 }
-/* line 87, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -109,19 +108,19 @@ html {
   height: 40px;
   width: 40px;
 }
-/* line 96, ../sass/screen.scss */
+/* line 100, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text {
   text-align: center;
   color: white;
 }
-/* line 99, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text .time {
   margin: 0.3em 0;
   font-size: 2em;
   display: block;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 123, ../sass/screen.scss */
 #navigation .nav-list li {
   width: 25%;
   float: left;
