--- a/static/sass/screen.scss
+++ b/static/sass/screen.scss
@@ -95,7 +95,7 @@ html{
 					}
 					.time-icon-inner{
 						@include border-radius(50%);
-						background:  green;
+						background:  #42A83D;
 						position: absolute;
 						left: 5px;
 						top:  5px;
