--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -104,7 +104,7 @@ html {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  background: green;
+  background: #42A83D;
   position: absolute;
   left: 5px;
   top: 5px;
