--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -38,33 +38,43 @@ html {
   padding: 10px;
 }
 
-/* line 51, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
+#page-routes .ui-icon-arrow-r {
+  display: none;
+}
+
+/* line 53, ../sass/screen.scss */
 #page-stops .ui-content .transit-list .ui-li-divider, #page-routes .ui-content .transit-list .ui-li-divider {
   height: 30px;
 }
-/* line 53, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 #page-stops .ui-content .transit-list .ui-li-divider .alpha-label, #page-routes .ui-content .transit-list .ui-li-divider .alpha-label {
   font-weight: bold;
-  text-shadow: 1px 1px white;
+  /*text-shadow: 1px 1px white;*/
+  font-size: 1.5em;
+  background-color: black;
+  padding: 2px 8px;
+  margin-right: 10px;
+  border-radius: 50%;
 }
-/* line 58, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus, #page-routes .ui-content .transit-list li.bus {
   min-height: 120px;
   vertical-align: middle;
 }
-/* line 61, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon, #page-routes .ui-content .transit-list li.bus .col-icon {
   float: left;
   margin-right: 20px;
   height: 120px;
 }
-/* line 65, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon img, #page-routes .ui-content .transit-list li.bus .col-icon img {
   height: 40px;
   margin: 2em auto;
   float: left;
 }
-/* line 70, ../sass/screen.scss */
+/* line 77, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-icon .transit-type, #page-routes .ui-content .transit-list li.bus .col-icon .transit-type {
   font-size: 1.5em;
   color: red;
@@ -72,19 +82,19 @@ html {
   left: 35px;
   bottom: 20px;
 }
-/* line 78, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-info, #page-routes .ui-content .transit-list li.bus .col-info {
   margin: 1em 0;
   white-space: normal;
   margin-right: 60px;
 }
-/* line 84, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time, #page-routes .ui-content .transit-list li.bus .col-time {
   position: absolute;
   right: 40px;
   display: inline-block;
 }
-/* line 88, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-outer, #page-routes .ui-content .transit-list li.bus .col-time .time-icon-outer {
   background: gray;
   height: 50px;
@@ -97,7 +107,7 @@ html {
   position: relative;
   margin: 2em 0;
 }
-/* line 96, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner, #page-routes .ui-content .transit-list li.bus .col-time .time-icon-inner {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -111,12 +121,12 @@ html {
   height: 40px;
   width: 40px;
 }
-/* line 105, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text, #page-routes .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text {
   text-align: center;
   color: white;
 }
-/* line 108, ../sass/screen.scss */
+/* line 115, ../sass/screen.scss */
 #page-stops .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text .time, #page-routes .ui-content .transit-list li.bus .col-time .time-icon-inner .time-text .time {
   margin: 0.5em 0;
   font-size: 1.9em;
@@ -124,7 +134,7 @@ html {
   font-weight: bold;
 }
 
-/* line 129, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 #navigation .nav-list li {
   width: 25%;
   float: left;
